Update Karaf scrips and configs; Add Equinox bundle workaround